# VeloSim

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .rsyncignore  LICENSE  README.md  codecov.yml  docker-compose.graphhopper.yml  docker-compose.osrm.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apidemo/: .gitignore  README.md  client_config.yaml  dispatcher.py  generate_client.py  openapi.json  pyproject.toml  requirements.txt  setup.sh
back/: DEVELOPMENT.md  Dockerfile  Dockerfile.migration  README.md  __init__.py  alembic.ini  exception_handlers.py  hello_world.py  main.py  migrate.bat  migrate.sh  pyproject.toml  requirements.txt
back/alembic/: env.py
back/alembic/seeds/: seed.sql  station_tasks.sql  stations.sql
back/alembic/versions/: 04454bcd162d_add.py  04454bcd162d_add_station_tasks.py  09bfae8f09b5_add_traffic_csv_data_to_sim_instances.py  2436c56e65c2_rename_dispatched_to_in_progress_in_.py  25d76b9be827_update_station_task_status_enum.py  26a3f05ecd67_create_sim_frames_and_extend_sim_.py  44c3c1f26443_add_scenario_payload_to_sim_instances.py  45d997a2ee04_seed_default_traffic_templates.py  504983637b01_drop_resources_table.py  70e3a53d2e2e_add_traffic_templates_table.py  729bd5cfd4fc_add_user_is_enabled.py  77374ce4f9cf_add_scenario_model.py  8daf6f1e4e8d_add_sim_keyframes_table_with_indexes.py  8f170126dde9_add_sim_instance_id_to_models.py  90070ebfe1c8_add_uuid_to_sim_instances_and_sim_.py  95b3268a07a0_add_completed_field_to_siminstance.py  9ee6c9922a25_add_completed_field_to_siminstance.py  a27cf78bb7b2_add_preferences_to_users.py  a38066d010a1_drop_stations_and_station_tasks_tables.py  ae69c02d06d8_add_resources.py  b92a9d455219_add_auth_schemas_no_refresh.py  cfd4d9b2ef99_add_auth_schemas.py  d33140546a64_create_stations_table.py  d689fd01c393_add_resources.py  d957b0e93607_add_sim_keyframes_table.py
back/api/: dependencies.py
back/api/v1/: __init__.py  logs.py  metrics.py  resources.py  scenarios.py  simulation.py  simulation_speed.py  station_tasks.py  stations.py  traffic_templates.py  users.py
back/auth/: __init__.py  auth.py  dependency.py  token.py
back/core/: __init__.py  config.py  simulation_callbacks.py  simulation_lag_monitor.py  simulation_startup_monitor.py  telemetry.py
back/crud/: __init__.py  resource.py  scenario.py  sim_frame.py  sim_instance.py  sim_keyframe.py  simulation_speed.py  station.py  station_task.py  traffic_template.py  user.py
back/database/: init.sql  session.py
back/exceptions/: __init__.py  bad_request_error.py  item_not_found_error.py  unexpected_error.py  velosim_permission_error.py  websocket_auth_error.py
back/grafana_logging/: README.md  examples.py  logger.py  loki-config.yaml  simple_logger.py
back/grafana_logging/prometheus/: container_names.yml  prometheus.yml
back/grafana_logging/promtail/: promtail-config.yaml
back/logging/: config.alloy  loki-config.yaml  simple_logger.py
back/middleware/: metrics_middleware.py
back/models/: __init__.py  refresh_tokens.py  resource.py  resource_type.py  scenario.py  sim_frame.py  sim_instance.py  sim_keyframe.py  station.py  station_task.py  station_task_type.py  task_status.py  traffic_template.py  user.py
back/schemas/: __init__.py  driver.py  driver_list.py  frontend_log.py  playback_speed.py  resource.py  scenario.py  sim_frame.py  sim_instance.py  sim_keyframe.py  sim_state.py  simulation_report.py  station.py  station_task.py  task_list.py  traffic_template.py  user.py
back/schemas/utils/: __init__.py  validators.py
back/services/: __init__.py  driver_service.py  frame_persistence_service.py  frontend_log_service.py  keyframe_persistence_service.py  resource_service.py  scenario_validation_service.py  simulation_data_service.py  simulation_service.py
back/services/utils/: __init__.py  create_input_params.py
back/tests/: __init__.py  conftest.py  mock_utils.py  test_frontend_log.py  test_hello_world.py  test_http_logging_middleware.py  test_main_public_endpoints.py
back/tests/test_api/: test_driver_list.py  test_exception_handlers.py  test_playback_speed.py  test_resources.py  test_scenarios.py  test_sim_keyframes.py  test_sim_state.py  test_simulation.py  test_station_tasks.py  test_stations.py  test_task_list.py  test_traffic_templates.py  test_users.py
back/tests/test_auth/: __init__.py  test_auth.py  test_dependency.py
back/tests/test_crud/: __init__.py  test_resource.py  test_scenario.py  test_sim_frame.py  test_sim_instance.py  test_sim_keyframe.py  test_station.py  test_station_task.py  test_user.py
back/tests/test_grafana/: test_examples.py  test_logger.py  test_prometheus_example.py  test_simple_logger.py
back/tests/test_services/: test_completion_percentage.py  test_driver_service.py  test_frame_persistence_service.py  test_frontend_log_service.py  test_keyframe_persistence_service.py  test_resource_service.py  test_scenario_validation.py  test_simulation_data_service.py  test_simulation_service.py  (+1 more)
(+577 files in other folders)
