[project]
name = "velosim-api-demo"
version = "0.1.0"
description = "Automated task dispatcher demo for VeloSim using REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "requests>=2.32.0",
    "openapi-python-client==0.21.2",
    "typer==0.9.0",
    "click==8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
velosim-dispatcher = "dispatcher:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
